# LLM-Zoomcamp-Homeworks

./: README.md
01-agentic-rag/: .gitignore  notebook.ipynb  rag_helper.py
02-vector-search/: notebook.ipynb  pyproject.toml
03-orchestration/: README.md  docker-compose.yml
04-evaluation/: ground-truth.csv  notebook.ipynb  pyproject.toml
05-monitoring/: db_query.ipynb  pyproject.toml  rag_helper.py  rag_tracer.py  sqlitespanexporter.py  starter.py  traces.db
workshop/: agent.py  ingest_logfire.py  main.py  pyproject.toml  query_duckdb.py
